talker-api/talker-api.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: talker-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: talker-api
  namespace: talker-api
  labels:
    app: talker-api
spec:
  selector:
    matchLabels:
      app: talker-api
  template:
    metadata:
      labels:
        app: talker-api
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: talker-api
        image: quay.io/kuadrant/authorino-examples:talker-api
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 120m
            memory: 100Mi
          limits:
            cpu: 250m
            memory: 300Mi
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: talker-api
  namespace: talker-api
  labels:
    app: talker-api
spec:
  selector:
    app: talker-api
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
