talker-api/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: talker-api-gw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - talker-api.apps.$CLUSTER_DOMAIN
    port:
      number: 80
      name: http2
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: talker-api
  namespace: istio-system
  labels:
    app: talker-api
spec:
  hosts:
  - talker-api.apps.$CLUSTER_DOMAIN
  gateways:
  - talker-api-gw
  http:
  - route:
    - destination:
        host: talker-api.talker-api.svc.cluster.local
        port:
          number: 80
